--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     	<div id="logo">
     		<img class="logo img-responsive" src="img/logo.jpg" alt="logo">	
   		</div>
-  		<header>
+  		<!-- <header> -->
   			<nav>
-	<ul>
-		<li><a class="scroll" href="#about">ABOUT</a></li>
-		<li><a class="scroll" href="#order">ORDER</a></li>
-		<li><a class="scroll" href="#calendar">CALENDAR</a></li>
-		<li><a class="scroll" href="#donate">DONATE</a></li>
-		<li><a class="scroll" href="#contact">CONTACT</a></li>
+				<ul>
+					<li><a class="scroll" href="#about">ABOUT</a></li>
+					<li><a class="scroll" href="#order">ORDER</a></li>
+					<li><a class="scroll" href="#calendar">CALENDAR</a></li>
+					<li><a class="scroll" href="#donate">DONATE</a></li>
+					<li><a class="scroll" href="#contact">CONTACT</a></li>
 
-	</ul>
-</nav>   	
-  		</header>
+				</ul>
+			</nav>   	
+  		<!-- </header> -->
 
 <div class="wrapper"> 
 
